got it to work, first time coding C++ in vscode instead of just in linux shell so it was cool to configure tasks.json properly

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,11 +3,12 @@
         {
             "type": "cppbuild",
             "label": "C/C++: g++.exe build active file",
-            "command": "C:\\msys64\\ucrt64\\bin\\g++.exe",
+            "command": "D:\\compilers\\ucrt64\\bin\\g++.exe",
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
-                "${file}",
+                "${workspaceFolder}/mips.cpp",
+                "${workspaceFolder}/instructionFetch.cpp",
                 "-o",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe"
             ],
