worked more on regFile, added bit extractor to break up full binary instructions

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,6 +9,7 @@
                 "-g",
                 "${workspaceFolder}/mips.cpp",
                 "${workspaceFolder}/instructionFetch.cpp",
+                "${workspaceFolder}/regFile.cpp",
                 "-o",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe"
             ],
